blackhole/cfg/cilium/cilium-ingress-label.yaml
apiVersion: v1
kind: Service
metadata:
  name: cilium-ingress
  namespace: kube-system
  labels:
    cilium-lb: "true"  # This label will be added or updated
