blackhole/cfg/cilium/cilium-gateway-api.yaml
# https://docs.cilium.io/en/latest/network/servicemesh/gateway-api/gateway-api/#examples
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-b-nova-app-1
spec:
  parentRefs:
  - name: my-b-nova-gateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /hello
    backendRefs:
    - name: hello
      port: 9080
  - matches:
    - headers:
      - type: Exact
        name: user
        value: tom
      queryParams:
      - type: Exact
        name: secretcode
        value: 123
      path:
        type: PathPrefix
        value: /
      method: GET
    backendRefs:
    - name: b-nova-page
      port: 9080
